--- a/App.config
+++ b/App.config
@@ -47,6 +47,15 @@
             <setting name="StayLogon" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Wartungsprotokoll_FontName" serializeAs="String">
+                <value>Microsoft Sans Serif</value>
+            </setting>
+            <setting name="Wartungsprotokoll_FontStyle" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Wartungsprotokoll_FontSize" serializeAs="String">
+                <value>8</value>
+            </setting>
         </MaschinenVerwaltung.UserSettings>
     </userSettings>
 </configuration>
